# obsidian-bookmark

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  nicknames.py  nicknames.yml  obsidian-bookmark.yml
.github/workflows/: binary-release.yml
extension/: bookmark.js  bookmark.py  manifest.json
src/: main.rs
