[package]
name = "obsidian-bookmark"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
eyre = "0.6.12"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
scraper = "0.19.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
